dev-1.0.0: Prepare version untuk release 1.0.0

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-APP_NAME=Laravel
+APP_NAME=Avicenna
 APP_ENV=local
+APP_VER=x.y.z
+APP_COPYRIGHT=2018
 APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
