--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4",
-        "maatwebsite/excel": "~2.1.0",
+        "maatwebsite/excel": "^2.0.",
         "spatie/laravel-permission": "^1.12",
         "yajra/laravel-datatables-oracle": "^7.2"
     },
