--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,12 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+DB_HOST_SQLSRV=sqlsrv
+DB_PORT_SQLSRV=1433
+DB_DATABASE_SQLSRV=homestead
+DB_USERNAME_SQLSRV=homestead
+DB_PASSWORD_SQLSRV=secret
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
