dev-1.1.0 : # ADD copy data csv to ftp WX04

--- a/.env.example
+++ b/.env.example
@@ -14,10 +14,16 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+DB_HOST_SQLSRV=10.80.254.43\IOT_TIDB
+DB_PORT_SQLSRV=1433
+DB_DATABASE_SQLSRV=ALColla_J922
+DB_USERNAME_SQLSRV=sa
+DB_PASSWORD_SQLSRV=IoTDB2017
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-SESSION_LIFETIME=120
+SESSION_LIFETIME=1
 QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
@@ -25,12 +31,17 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=aiia-svr-mx01.aiia.co.id
+MAIL_PORT=25
+MAIL_USERNAME=aisinbisa@aiia.co.id
+MAIL_PASSWORD=Kiic2014
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+FTP_HOST=172.18.3.11
+FTP_PORT=2122
+FTP_USERNAME=tmmin
+FTP_PASSWORD=Kiic2019
