--- a/.env.example
+++ b/.env.example
@@ -6,18 +6,25 @@ APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
+AVI_EMAIL_LINE=
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
+
+DB_HOST_SQLSRV=
+DB_PORT_SQLSRV=
+DB_DATABASE_SQLSRV=
+DB_USERNAME_SQLSRV=
+DB_PASSWORD_SQLSRV=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-SESSION_LIFETIME=120
+SESSION_LIFETIME=1
 QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
@@ -25,12 +32,18 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=
+MAIL_PORT=25
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+FTP_HOST=
+FTP_PORT=
+FTP_USERNAME=
+FTP_PASSWORD=
+
