--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,9 @@ APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
-AVI_EMAIL_LINE=
+
+AVI_EMAIL_LINE=300
+AVI_SLIDER_LINE=2
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
