--- a/.env.example
+++ b/.env.example
@@ -38,10 +38,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=null
+MAIL_HOST=aiia-svr-mx01.aiia.co.id
 MAIL_PORT=25
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=aisinbisa@aiia.co.id
+MAIL_PASSWORD=Kiic2014
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=null
