dev-1.1.0: WIP SMS Gateway Alert

--- a/.env.example
+++ b/.env.example
@@ -50,6 +50,10 @@ PUSHER_APP_ID=null
 PUSHER_APP_KEY=null
 PUSHER_APP_SECRET=null
 
+SMS_GATEWAY_URL=http://api.localhost
+SMS_GATEWAY_USER=null
+SMS_GATEWAY_PASSWORD=null
+SMS_GATEWAY_TIMEOUT=5
 
 FTP_HOST=null
 FTP_PORT=null
