dev-1.1.0 : # tambahan downtime ke env # tambahan efek dandori

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,9 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-AVI_EMAIL_LINE=300
+AVI_EMAIL_LINE_1=300
+AVI_EMAIL_LINE_2=600
+AVI_EMAIL_LINE_3=900
 AVI_SLIDER_LINE=2
 
 DB_CONNECTION=mysql
