--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,13 @@ DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
 
+DB_CONNECTION_2=mysql
+DB_HOST_2=127.0.0.1
+DB_PORT_2=3306
+DB_DATABASE_2=wacenter
+DB_USERNAME_2=root
+DB_PASSWORD_2=P@ssw0rd
+
 DB_HOST_SQLSRV=
 DB_PORT_SQLSRV=
 DB_DATABASE_SQLSRV=
