--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.6.4",
         "acacha/admin-lte-template-laravel": "4.*",
         "doctrine/dbal": "^2.5",
-        "guzzlehttp/guzzle": "^6.3",
+        "guzzlehttp/guzzle": "~5.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4",
