--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravelcollective/html": "^5.4",
         "maatwebsite/excel": "~2.1.0",
         "spatie/laravel-permission": "^1.12",
+        "tymon/jwt-auth": "^1.0",
         "yajra/laravel-datatables-oracle": "^7.2"
     },
     "require-dev": {
